# Mostro_MVP_Program

./: .gitignore  Anchor.toml  Mostro_MVP.theia-workspace  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/solana/: useProgram.ts
app/solana/client/: pda.ts  rpc.ts
programs/mostro/: Cargo.toml
programs/mostro/src/: error.rs  lib.rs
programs/mostro/src/instructions/: buy_token.rs  create_config.rs  mod.rs
programs/mostro/src/state/: config.rs  proposal.rs
programs/mostro_program/: Cargo.toml
programs/mostro_program/src/: constants.rs  error.rs  lib.rs  tests.rs
programs/mostro_program/src/instructions/: buy_perks.rs  buy_tokens_for_proposal.rs  create_artist.rs  create_config.rs  create_perk.rs  create_proposal.rs  create_vesting_stream.rs  create_vote.rs  execute_proposal.rs  finalize_proposal.rs  mod.rs  release_tokens.rs  sell_token.rs  vote_on_proposal.rs  vote_proposal.rs
programs/mostro_program/src/state/: artist.rs  config.rs  mod.rs  perk.rs  proposal.rs  vote.rs
scripts/: create_config.ts
solana-release/: version.yml
tests/: create_artist_test.ts  create_config_test.ts  mostro.ts
