[package]
name = "mostro"
version = "0.1.0"
edition = "2021"

[lib]
name = "mostro"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
bumpalo = "3.14.0"

[dev-dependencies]
solana-sdk = "2.1.0"
solana-program-test = "2.1.0"
