[package]
name = "mostro"
version = "0.1.0"
edition = "2021"

[lib]
name = "mostro"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []          # no features enabled by default
anchor = []           # enable when building via anchor build
manual = []           # optional tag for cargo-only mode
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
bumpalo = "3.14.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[dev-dependencies]
solana-sdk = "2.1.0"
solana-program-test = "2.1.0"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread"] }


